# tp_raytracing

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: continuous-integration.yml
doc/: Material.md
examples/example_glut_opengl2/: example_glut_opengl2  imgui.ini
src/: Makefile  MyApp  Random.hpp  imgui.ini  main.cpp
src/glm/: vec3.hpp
src/raytracing/JSP/: cpp-smallpt.cpp  geometry.hpp  imageio.hpp  specular.hpp  sphere.hpp  vector.hpp
src/raytracing/algebra/: math.hpp  vector.cpp  vector.hpp
src/raytracing/controller/: CameraFactory.cpp  CameraFactory.hpp  ImageWrapper.cpp  ImageWrapper.hpp  Renderer.cpp  Renderer.hpp  SceneFactory.cpp  SceneFactory.hpp
src/raytracing/core/: Camera.cpp  Camera.hpp  HitPayload.hpp  Light.cpp  Light.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp
src/raytracing/core/hittableObject/: Material.cpp  Material.hpp  Sphere.cpp  Sphere.hpp  Sphere_src.hpp  Triangle.cpp  Triangle.hpp
src/raytracing/gui/: App.cpp  App.hpp
src/raytracing/model/: Sphere.hpp  sphere.hpp
src/raytracing/utils/: math.cpp  math.hpp  vector.cpp  vector.hpp
